build:babel added

--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,21 @@
 {
     "presets": [
         [
+            // Mehr: https://babeljs.io/docs/en/babel-preset-env
             "@babel/preset-env",
             {
                 "targets": {
-                    "browsers": [
-                        "last 2 Chrome versions",
-                        "last 1 Safari versions",
-                        "last 1 Firefox versions"
-                    ]
-                }
+                    "esmodules": true,
+                    "node": "current",
+                    // "browsers": [
+                    //    "last 2 Chrome versions",
+                    //    "last 1 Safari versions",
+                    //    "last 1 Firefox versions"
+                    //]
+                },
+                // Enable transformation of ES6 module syntax to another module type.
+                // Setting this to false will not transform modules.
+                "modules": "false"
             }
         ],
         "@babel/typescript"
