--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
   "scripts": {
-    "gen:barrels": "barrelsby --delete -d src/main --exclude ConfigLog4j --exclude 'events/utils' -l top -s filesystem",
+    "gen:barrels": "barrelsby --singleQuotes --delete -d src/main --exclude ConfigLog4j --exclude 'events/utils' -l top -s flat",
     "serve": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development",
     "start": "yarn serve --open",
     "tc": "tsc --noEmit",
     "tc:watch": "npm run tc -- --watch",
     "build": "rm -rf lib && yarn run build:ts",
     "build:ts": "tsc --rootDir $(pwd)/src/main --project tsconfig.lib.json --declaration --outDir $(pwd)/lib",
-    "build:ts:watch": "tsc --rootDir src/main --declaration --outDir lib --watch",
-    "build:types": "tsc --rootDir src/main --declaration --outDir lib --emitDeclarationOnly",
-    "build:js": "babel src/main --out-dir lib --extensions \".ts,.tsx\" --source-maps",
+    "build:ts:watch": "yarn build:ts --watch",
+    "build:types": "rm -rf lib && yarn build:ts --emitDeclarationOnly",
+    "build:js": "rm -rf lib && NODE_ENV=development webpack --config webpack.ts.js --mode development",
+    "build:js:prod": "rm -rf lib && NODE_ENV=production webpack --config webpack.ts.js --mode production",
+    "build:babel": "rm -rf lib && REQUIRE_TARGET='browser' babel src/main --out-dir lib --extensions \".ts,.tsx\" --source-maps",
     "build:node": "rm -rf bin && NODE_ENV=development webpack --config webpack.node.js --mode development",
     "build:node:prod": "NODE_ENV=production webpack --config webpack.node.js --mode production",
     "build:web": "rm -rf dist && NODE_ENV=development webpack --config webpack.web.js --mode development",
@@ -31,7 +33,7 @@
     "test:unit": "jest --colors src/test/unit",
     "test:integration": "jest --colors --runInBand --detectOpenHandles src/test/integration",
     "test:e2e": "E2E_TEST='true' jest --colors --runInBand --detectOpenHandles src/test/e2e",
-    "doc": "typedoc --out doc",
+    "doc": "typedoc --out doc --tsconfig tsconfig.lib.json",
     "clean": "rm -rf lib dist bin doc && jest --clearCache",
     "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}"
   },
@@ -47,20 +49,19 @@
     "global": "^4.3.2",
     "moment": "^2.24.0",
     "ntl": "^3.2.4",
-    "source-map-loader": "^0.2.4",
     "typescript-collections": "1.3.2",
     "typescript-logging": "^0.6.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/node": "^7.2.2",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime": "^7.4.4",
+    "@babel/runtime": "^7.4.5",
     "@types/core-js": "^2.5.0",
     "@types/expect-puppeteer": "3.3.1",
     "@types/jest": "^24.0.13",
@@ -98,9 +99,10 @@
     "sass-loader": "^7.1.0",
     "semver": "^6.0.0",
     "shelljs": "^0.8.3",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.0",
+    "ts-loader": "^6.0.1",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "tslint-consistent-codestyle": "^1.15.1",
@@ -109,9 +111,9 @@
     "typedoc": "^0.14.2",
     "typescript": "^3.4.5",
     "url-loader": "^1.1.2",
-    "webpack": "^4.31.0",
+    "webpack": "^4.32.1",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1",
+    "webpack-dev-server": "^3.4.1",
     "webpack-livereload-plugin": "^2.2.0",
     "webpack-node-externals": "^1.7.2",
     "winston-transport-browserconsole": "^1.0.1"
