--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -20,7 +20,10 @@
         "outDir": "./lib",
         "rootDir": "./src",
 
-        "module": "commonjs",
+        // commonjs, amd oder es6 (esnext)
+        // Beste Variante ist es6 (Vue esnext)
+        // Mehr: http://www.geekabyte.io/2018/12/understanding-javascript-modules-as.html
+        "module": "esnext",
         "moduleResolution": "node",
 
         "sourceMap": true,
