--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "yarn serve --open",
     "tc": "tsc --noEmit",
     "tc:watch": "npm run tc -- --watch",
-    "build": "rm -rf lib && yarn run build:ts",
+    "build": "rm -rf lib && yarn run gen:barrels && yarn run build:ts",
     "build:ts": "tsc --rootDir $(pwd)/src/main --project tsconfig.lib.json --declaration --outDir $(pwd)/lib",
     "build:ts:watch": "yarn build:ts --watch",
     "build:types": "rm -rf lib && yarn build:ts --emitDeclarationOnly",
@@ -65,7 +65,7 @@
     "@types/core-js": "^2.5.0",
     "@types/expect-puppeteer": "3.3.1",
     "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.2",
+    "@types/node": "^12.0.4",
     "@types/puppeteer": "^1.12.4",
     "@types/qunit": "^2.9.0",
     "@types/shelljs": "^0.8.5",
@@ -77,7 +77,7 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-preset-modern-browsers": "^14.0.0",
     "barrelsby": "^2.1.1",
-    "clean-webpack-plugin": "^2.0.2",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
@@ -89,30 +89,30 @@
     "jest-cli": "^24.8.0",
     "jest-extended": "^0.11.1",
     "jest-haste-map": "^24.8.0",
-    "jest-puppeteer": "^4.1.1",
+    "jest-puppeteer": "^4.2.0",
     "jest-resolve": "^24.8.0",
-    "mini-css-extract-plugin": "^0.6.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "postcss": "^7.0.16",
     "postcss-loader": "^3.0.0",
-    "puppeteer": "^1.16.0",
+    "puppeteer": "^1.17.0",
     "qunit": "^2.9.2",
     "sass-loader": "^7.1.0",
-    "semver": "^6.0.0",
+    "semver": "^6.1.1",
     "shelljs": "^0.8.3",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.1",
-    "ts-node": "^8.1.0",
-    "tslint": "^5.16.0",
+    "ts-node": "^8.2.0",
+    "tslint": "^5.17.0",
     "tslint-consistent-codestyle": "^1.15.1",
     "tslint-loader": "^3.5.4",
     "tslint-override": "^0.5.1",
     "typedoc": "^0.14.2",
-    "typescript": "^3.4.5",
+    "typescript": "^3.5.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.32.1",
+    "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1",
     "webpack-livereload-plugin": "^2.2.0",
