Extension-Function Test added

--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
         "tc": "tsc --noEmit --project tsconfig.lib.json",
         "tc:watch": "npm run tc -- --watch",
         "lint": "tslint --project tsconfig.json",
-        "test": "yarn run gen:barrels && yarn run test:unit && yarn run test:e2e",
-        "test:unit": "jest --colors src/test/unit",
-        "test:integration": "jest --colors --runInBand --detectOpenHandles src/test/integration",
-        "test:e2e": "E2E_TEST='true' jest --colors --runInBand --detectOpenHandles src/test/e2e",
+        "test": "yarn run gen:barrels && jest --clearCache && yarn run test:unit && yarn run test:e2e",
+        "test:unit": "jest --colors test/unit",
+        "test:integration": "jest --colors --runInBand --detectOpenHandles test/integration",
+        "test:e2e": "E2E_TEST='true' jest --colors --runInBand --detectOpenHandles test/e2e",
         "build": "rm -rf lib && yarn run gen:barrels && yarn run build:ts",
         "build:ts": "tsc --rootDir $(pwd)/src/main --project tsconfig.lib.json --declaration --outDir $(pwd)/lib",
         "build:ts:watch": "yarn build:ts --watch",
