--- a/package.json
+++ b/package.json
@@ -46,9 +46,7 @@
         "url": "https://github.com/MikeMitterer/typescript-training"
     },
     "dependencies": {
-        "@mmit/logging": "^0.1.5",
-        "global": "^4.4.0",
-        "typescript-collections": "1.3.3"
+        "@mmit/logging": "^0.1.5"
     },
     "devDependencies": {
         "@babel/cli": "^7.10.5",
@@ -62,8 +60,8 @@
         "@babel/runtime": "^7.10.5",
         "@types/core-js": "^2.5.3",
         "@types/expect-puppeteer": "4.4.3",
-        "@types/jest": "^26.0.4",
-        "@types/node": "^14.0.23",
+        "@types/jest": "^26.0.5",
+        "@types/node": "^14.0.24",
         "@types/puppeteer": "^3.0.1",
         "@types/qunit": "^2.9.1",
         "@types/shelljs": "^0.8.8",
@@ -94,7 +92,7 @@
         "node-sass": "^4.14.1",
         "postcss": "^7.0.32",
         "postcss-loader": "^3.0.0",
-        "puppeteer": "^5.1.0",
+        "puppeteer": "^5.2.0",
         "qunit": "^2.10.1",
         "sass-loader": "^9.0.2",
         "semver": "^7.3.2",
