--- a/package.json
+++ b/package.json
@@ -46,70 +46,73 @@
         "url": "https://github.com/MikeMitterer/typescript-training"
     },
     "dependencies": {
-        "@mmit/logging": "^0.1.5"
+        "@mmit/logging": "^0.1.5",
+        "date-fns": "^2.15.0",
+        "path": "^0.12.7"
     },
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@babel/core": "^7.10.5",
+        "@babel/core": "^7.11.1",
         "@babel/node": "^7.10.5",
         "@babel/plugin-proposal-class-properties": "^7.10.4",
-        "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
-        "@babel/plugin-transform-runtime": "^7.10.5",
-        "@babel/preset-env": "^7.10.4",
+        "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+        "@babel/plugin-transform-runtime": "^7.11.0",
+        "@babel/preset-env": "^7.11.0",
         "@babel/preset-typescript": "^7.10.4",
-        "@babel/runtime": "^7.10.5",
+        "@babel/runtime": "^7.11.1",
+        "@mmit/styles": "^0.1.7",
         "@types/core-js": "^2.5.3",
         "@types/expect-puppeteer": "4.4.3",
-        "@types/jest": "^26.0.5",
-        "@types/node": "^14.0.24",
+        "@types/jest": "^26.0.8",
+        "@types/node": "^14.0.27",
         "@types/puppeteer": "^3.0.1",
         "@types/qunit": "^2.9.1",
         "@types/shelljs": "^0.8.8",
         "@types/ws": "^7.2.6",
-        "autoprefixer": "^9.8.5",
+        "autoprefixer": "^9.8.6",
         "awesome-typescript-loader": "^5.2.1",
-        "babel-jest": "^26.1.0",
+        "babel-jest": "^26.2.2",
         "babel-loader": "^8.1.0",
         "babel-plugin-transform-inline-environment-variables": "^0.4.3",
         "babel-preset-modern-browsers": "^14.2.1",
         "barrelsby": "^2.2.0",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^6.0.3",
-        "css-loader": "^3.6.0",
+        "css-loader": "^4.2.0",
         "file-loader": "^6.0.0",
         "html-beautify-webpack-plugin": "^1.0.5",
         "html-loader": "^1.1.0",
         "html-webpack-plugin": "^3.2.0",
         "html-webpack-string-replace-plugin": "^1.1.0",
-        "jest": "^26.1.0",
-        "jest-cli": "^26.1.0",
+        "jest": "^26.2.2",
+        "jest-cli": "^26.2.2",
         "jest-extended": "^0.11.5",
-        "jest-haste-map": "^26.1.0",
+        "jest-haste-map": "^26.2.2",
         "jest-puppeteer": "^4.4.0",
-        "jest-resolve": "^26.1.0",
+        "jest-resolve": "^26.2.2",
         "mini-css-extract-plugin": "^0.9.0",
         "moment": "^2.27.0",
         "node-sass": "^4.14.1",
         "postcss": "^7.0.32",
         "postcss-loader": "^3.0.0",
-        "puppeteer": "^5.2.0",
+        "puppeteer": "^5.2.1",
         "qunit": "^2.10.1",
-        "sass-loader": "^9.0.2",
+        "sass-loader": "^9.0.3",
         "semver": "^7.3.2",
         "shelljs": "^0.8.4",
         "source-map-loader": "^1.0.1",
         "style-loader": "^1.2.1",
-        "ts-jest": "^26.1.3",
-        "ts-loader": "^8.0.1",
+        "ts-jest": "^26.1.4",
+        "ts-loader": "^8.0.2",
         "ts-node": "^8.10.2",
-        "tslint": "^6.1.2",
+        "tslint": "^6.1.3",
         "tslint-consistent-codestyle": "^1.16.0",
         "tslint-loader": "^3.5.4",
         "tslint-override": "^1.0.1",
         "typedoc": "^0.17.8",
         "typescript": "^3.9.7",
         "url-loader": "^4.1.0",
-        "webpack": "^4.43.0",
+        "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0",
         "webpack-livereload-plugin": "^2.3.0",
