--- a/package.json
+++ b/package.json
@@ -1,121 +1,124 @@
 {
-    "name": "@mmit/typescript-starter",
-    "author": "Mike Mitterer",
-    "version": "0.6.22",
-    "description": "This is a starter project for typescript projects",
-    "keywords": [
-        "typescript"
-    ],
-    "license": "MIT",
-    "type-check": "tsc",
-    "main": "./lib/index.js",
-    "typings": "./lib/index.d.ts",
-    "scripts": {
-        "gen:barrels": "barrelsby --singleQuotes --delete -d src/main --exclude ConfigLog4j --exclude 'events/utils' -l top -s flat",
-        "serve": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development",
-        "start": "yarn serve --open",
-        "tc": "tsc --noEmit --project tsconfig.lib.json",
-        "tc:watch": "npm run tc -- --watch",
-        "lint": "tslint --project tsconfig.json",
-        "test": "yarn run gen:barrels && jest --clearCache && yarn run test:unit && yarn run test:e2e",
-        "test:unit": "jest --colors test/unit",
-        "test:integration": "jest --colors --runInBand --detectOpenHandles test/integration",
-        "test:e2e": "E2E_TEST='true' jest --colors --runInBand --detectOpenHandles test/e2e",
-        "build": "rm -rf lib && yarn run gen:barrels && yarn run build:ts",
-        "build:ts": "tsc --rootDir $(pwd)/src/main --project tsconfig.lib.json --declaration --outDir $(pwd)/lib",
-        "build:ts:watch": "yarn build:ts --watch",
-        "build:types": "rm -rf lib && yarn build:ts --emitDeclarationOnly",
-        "build:js": "rm -rf lib && NODE_ENV=development webpack --config webpack.ts.js --mode development",
-        "build:js:prod": "rm -rf lib && NODE_ENV=production webpack --config webpack.ts.js --mode production",
-        "build:babel": "rm -rf lib && REQUIRE_TARGET='browser' babel src/main --out-dir lib --extensions \".ts,.tsx\" --source-maps",
-        "build:node": "rm -rf bin && NODE_ENV=development webpack --config webpack.node.js --mode development",
-        "build:node:prod": "NODE_ENV=production webpack --config webpack.node.js --mode production",
-        "build:web": "rm -rf dist && NODE_ENV=development webpack --config webpack.web.js --mode development",
-        "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
-        "deploy": "yarn version --new-version patch && yarn publish --non-interactive",
-        "doc": "typedoc --out doc --tsconfig tsconfig.lib.json",
-        "clean": "rm -rf lib dist bin doc && jest --clearCache",
-        "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}"
-    },
-    "files": [
-        "lib",
-        "src"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/MikeMitterer/typescript-training"
-    },
-    "dependencies": {
-        "@mmit/logging": "^0.1.5",
-        "date-fns": "^2.16.1",
-        "path": "^0.12.7"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.11.6",
-        "@babel/core": "^7.11.6",
-        "@babel/node": "^7.10.5",
-        "@babel/plugin-proposal-class-properties": "^7.10.4",
-        "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-        "@babel/plugin-transform-runtime": "^7.11.5",
-        "@babel/preset-env": "^7.11.5",
-        "@babel/preset-typescript": "^7.10.4",
-        "@babel/runtime": "^7.11.2",
-        "@mmit/styles": "^0.1.15",
-        "@types/core-js": "^2.5.4",
-        "@types/expect-puppeteer": "4.4.3",
-        "@types/jest": "^26.0.13",
-        "@types/node": "^14.10.0",
-        "@types/puppeteer": "^3.0.2",
-        "@types/qunit": "^2.9.1",
-        "@types/shelljs": "^0.8.8",
-        "@types/ws": "^7.2.6",
-        "autoprefixer": "^9.8.6",
-        "awesome-typescript-loader": "^5.2.1",
-        "babel-jest": "^26.3.0",
-        "babel-loader": "^8.1.0",
-        "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-        "babel-preset-modern-browsers": "^14.2.1",
-        "barrelsby": "^2.2.0",
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^6.1.0",
-        "css-loader": "^4.3.0",
-        "file-loader": "^6.1.0",
-        "html-beautify-webpack-plugin": "^1.0.5",
-        "html-loader": "^1.3.0",
-        "html-webpack-plugin": "^3.2.0",
-        "html-webpack-string-replace-plugin": "^1.1.0",
-        "jest": "^26.4.2",
-        "jest-cli": "^26.4.2",
-        "jest-extended": "^0.11.5",
-        "jest-haste-map": "^26.3.0",
-        "jest-puppeteer": "^4.4.0",
-        "jest-resolve": "^26.4.0",
-        "mini-css-extract-plugin": "^0.11.1",
-        "moment": "^2.27.0",
-        "node-sass": "^4.14.1",
-        "postcss": "^7.0.32",
-        "postcss-loader": "^4.0.1",
-        "puppeteer": "^5.2.1",
-        "qunit": "^2.11.2",
-        "sass-loader": "^10.0.2",
-        "semver": "^7.3.2",
-        "shelljs": "^0.8.4",
-        "source-map-loader": "^1.1.0",
-        "style-loader": "^1.2.1",
-        "ts-jest": "^26.3.0",
-        "ts-loader": "^8.0.3",
-        "ts-node": "^9.0.0",
-        "tslint": "^6.1.3",
-        "tslint-consistent-codestyle": "^1.16.0",
-        "tslint-loader": "^3.5.4",
-        "tslint-override": "^1.0.1",
-        "typedoc": "^0.19.1",
-        "typescript": "^4.0.2",
-        "url-loader": "^4.1.0",
-        "webpack": "^4.44.1",
-        "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0",
-        "webpack-livereload-plugin": "^2.3.0",
-        "webpack-node-externals": "^2.5.2"
-    }
+  "name": "@mmit/typescript-starter",
+  "author": "Mike Mitterer",
+  "version": "0.6.22",
+  "description": "This is a starter project for typescript projects",
+  "keywords": [
+    "typescript"
+  ],
+  "license": "MIT",
+  "type-check": "tsc",
+  "main": "./lib/index.js",
+  "typings": "./lib/index.d.ts",
+  "scripts": {
+    "gen:barrels": "barrelsby --singleQuotes --delete -d src/main --exclude ConfigLog4j --exclude 'events/utils' -l top -s flat",
+    "serve": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development",
+    "start": "yarn serve --open",
+    "tc": "tsc --noEmit --project tsconfig.lib.json",
+    "tc:watch": "npm run tc -- --watch",
+    "lint": "tslint --project tsconfig.json",
+    "test": "yarn run gen:barrels && jest --clearCache && yarn run test:unit && yarn run test:e2e",
+    "test:unit": "jest --colors test/unit",
+    "test:integration": "jest --colors --runInBand --detectOpenHandles test/integration",
+    "test:e2e": "E2E_TEST='true' jest --colors --runInBand --detectOpenHandles test/e2e",
+    "build": "rm -rf lib && yarn run gen:barrels && yarn run build:ts",
+    "build:ts": "tsc --rootDir $(pwd)/src/main --project tsconfig.lib.json --declaration --outDir $(pwd)/lib",
+    "build:ts:watch": "yarn build:ts --watch",
+    "build:types": "rm -rf lib && yarn build:ts --emitDeclarationOnly",
+    "build:js": "rm -rf lib && NODE_ENV=development webpack --config webpack.ts.js --mode development",
+    "build:js:prod": "rm -rf lib && NODE_ENV=production webpack --config webpack.ts.js --mode production",
+    "build:babel": "rm -rf lib && REQUIRE_TARGET='browser' babel src/main --out-dir lib --extensions \".ts,.tsx\" --source-maps",
+    "build:node": "rm -rf bin && NODE_ENV=development webpack --config webpack.node.js --mode development",
+    "build:node:prod": "NODE_ENV=production webpack --config webpack.node.js --mode production",
+    "build:web": "rm -rf dist && NODE_ENV=development webpack --config webpack.web.js --mode development",
+    "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
+    "deploy": "yarn version --new-version patch && yarn publish --non-interactive",
+    "doc": "typedoc --out doc --tsconfig tsconfig.lib.json",
+    "clean": "rm -rf lib dist bin doc && jest --clearCache",
+    "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}"
+  },
+  "files": [
+    "lib",
+    "src"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MikeMitterer/typescript-training"
+  },
+  "dependencies": {
+    "@mmit/logging": "^0.1.5",
+    "date-fns": "^2.16.1",
+    "path": "^0.12.7",
+    "vue": "^3.0.0-beta.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
+    "@babel/runtime": "^7.11.2",
+    "@mmit/styles": "^0.1.15",
+    "@types/core-js": "^2.5.4",
+    "@types/expect-puppeteer": "4.4.3",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.10.0",
+    "@types/puppeteer": "^3.0.2",
+    "@types/qunit": "^2.9.1",
+    "@types/shelljs": "^0.8.8",
+    "@types/ws": "^7.2.6",
+    "@vue/compiler-sfc": "^3.0.0-beta.1",
+    "autoprefixer": "^9.8.6",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^26.3.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "babel-preset-modern-browsers": "^14.2.1",
+    "barrelsby": "^2.2.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.1.0",
+    "css-loader": "^4.3.0",
+    "file-loader": "^6.1.0",
+    "html-beautify-webpack-plugin": "^1.0.5",
+    "html-loader": "^1.3.0",
+    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-string-replace-plugin": "^1.1.0",
+    "jest": "^26.4.2",
+    "jest-cli": "^26.4.2",
+    "jest-extended": "^0.11.5",
+    "jest-haste-map": "^26.3.0",
+    "jest-puppeteer": "^4.4.0",
+    "jest-resolve": "^26.4.0",
+    "mini-css-extract-plugin": "^0.11.1",
+    "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
+    "postcss": "^7.0.32",
+    "postcss-loader": "^4.0.1",
+    "puppeteer": "^5.2.1",
+    "qunit": "^2.11.2",
+    "sass-loader": "^10.0.2",
+    "semver": "^7.3.2",
+    "shelljs": "^0.8.4",
+    "source-map-loader": "^1.1.0",
+    "style-loader": "^1.2.1",
+    "ts-jest": "^26.3.0",
+    "ts-loader": "^8.0.3",
+    "ts-node": "^9.0.0",
+    "tslint": "^6.1.3",
+    "tslint-consistent-codestyle": "^1.16.0",
+    "tslint-loader": "^3.5.4",
+    "tslint-override": "^1.0.1",
+    "typedoc": "^0.19.1",
+    "typescript": "^4.0.2",
+    "url-loader": "^4.1.0",
+    "vue-cli-plugin-vue-next": "~0.1.3",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-livereload-plugin": "^2.3.0",
+    "webpack-node-externals": "^2.5.2"
+  }
 }
