--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
         "@babel/core": "^7.11.6",
         "@babel/node": "^7.10.5",
         "@babel/plugin-proposal-class-properties": "^7.10.4",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
         "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+        "@babel/plugin-proposal-optional-chaining": "^7.11.0",
         "@babel/plugin-transform-runtime": "^7.11.5",
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-typescript": "^7.10.4",
@@ -76,6 +78,7 @@
         "babel-plugin-transform-inline-environment-variables": "^0.4.3",
         "babel-preset-modern-browsers": "^14.2.1",
         "barrelsby": "^2.2.0",
+        "clean-terminal-webpack-plugin": "^3.0.0",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^6.1.0",
         "css-loader": "^4.3.0",
