--- a/package.json
+++ b/package.json
@@ -62,30 +62,31 @@
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-typescript": "^7.10.4",
         "@babel/runtime": "^7.11.2",
-        "@mmit/styles": "^0.1.17",
+        "@mmit/styles": "^0.1.19",
         "@types/core-js": "^2.5.4",
         "@types/expect-puppeteer": "4.4.3",
-        "@types/jest": "^26.0.13",
-        "@types/node": "^14.10.1",
+        "@types/jest": "^26.0.14",
+        "@types/node": "^14.11.2",
         "@types/puppeteer": "^3.0.2",
-        "@types/qunit": "^2.9.1",
+        "@types/qunit": "^2.9.2",
         "@types/shelljs": "^0.8.8",
         "@types/ws": "^7.2.6",
-        "autoprefixer": "^9.8.6",
+        "autoprefixer": "^10.0.0",
         "awesome-typescript-loader": "^5.2.1",
         "babel-jest": "^26.3.0",
         "babel-loader": "^8.1.0",
         "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-        "babel-preset-modern-browsers": "^14.2.1",
+        "babel-preset-modern-browsers": "^15.0.2",
         "barrelsby": "^2.2.0",
+        "beautify-html-webpack-plugin": "^1.0.3",
         "clean-terminal-webpack-plugin": "^3.0.0",
         "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^6.1.0",
+        "copy-webpack-plugin": "^6.1.1",
         "css-loader": "^4.3.0",
+        "ejs-compiled-loader": "^3.0.0",
         "file-loader": "^6.1.0",
-        "html-beautify-webpack-plugin": "^1.0.5",
-        "html-loader": "^1.3.0",
-        "html-webpack-plugin": "^3.2.0",
+        "html-loader": "^1.3.1",
+        "html-webpack-plugin": "^4.5.0",
         "html-webpack-string-replace-plugin": "^1.1.0",
         "jest": "^26.4.2",
         "jest-cli": "^26.4.2",
@@ -95,26 +96,26 @@
         "jest-resolve": "^26.4.0",
         "mini-css-extract-plugin": "^0.11.2",
         "node-sass": "^4.14.1",
-        "postcss": "^7.0.32",
-        "postcss-loader": "^4.0.1",
-        "puppeteer": "^5.3.0",
+        "postcss": "^8.0.8",
+        "postcss-loader": "^4.0.2",
+        "puppeteer": "^5.3.1",
         "qunit": "^2.11.2",
         "sass-loader": "^10.0.2",
         "semver": "^7.3.2",
         "shelljs": "^0.8.4",
         "source-map-loader": "^1.1.0",
         "style-loader": "^1.2.1",
-        "ts-jest": "^26.3.0",
-        "ts-loader": "^8.0.3",
+        "ts-jest": "^26.4.0",
+        "ts-loader": "^8.0.4",
         "ts-node": "^9.0.0",
         "tslint": "^6.1.3",
         "tslint-consistent-codestyle": "^1.16.0",
         "tslint-loader": "^3.5.4",
         "tslint-override": "^1.0.1",
-        "typedoc": "^0.19.1",
-        "typescript": "^4.0.2",
+        "typedoc": "^0.19.2",
+        "typescript": "^4.0.3",
         "url-loader": "^4.1.0",
-        "webpack": "^4.44.1",
+        "webpack": "^4.44.2",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0",
         "webpack-livereload-plugin": "^2.3.0",
