--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "tc": "tsc --noEmit --project tsconfig.lib.json",
         "tc:watch": "npm run tc -- --watch",
         "lint": "tslint --project tsconfig.json",
-        "test": "yarn run gen:barrels && jest --clearCache && yarn run test:unit && yarn run test:e2e",
+        "test": "yarn run gen:barrels && jest --clearCache && yarn run test:unit && yarn run test:integration",
         "test:unit": "jest --colors test/unit",
         "test:integration": "jest --colors --runInBand --detectOpenHandles test/integration",
         "test:e2e": "E2E_TEST='true' jest --colors --runInBand --detectOpenHandles test/e2e",
