--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
         "build:pwa:local": "rm -f ./dist/service-worker.js &&  webpack --config webpack.web.js --progress --colors && node ./workbox-build-inject.js",
         "deploy": "yarn version --new-version patch && yarn publish --non-interactive",
-        "doc": "typedoc --out doc --tsconfig tsconfig.lib.json",
+        "doc": "typedoc --out doc --tsconfig tsconfig.lib.json src/main/",
         "clean": "rm -rf lib dist bin doc && jest --clearCache",
         "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}"
     },
@@ -123,7 +123,7 @@
         "tslint-consistent-codestyle": "^1.16.0",
         "tslint-loader": "^3.5.4",
         "tslint-override": "^1.0.1",
-        "typedoc": "^0.19.2",
+        "typedoc": "^0.20.16",
         "typescript": "^4.1.3",
         "url-loader": "^4.1.1",
         "webpack": "^4.44.2",
