--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "build:web": "rm -rf dist && NODE_ENV=development webpack --config webpack.web.js --mode development",
         "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
         "deploy": "yarn version --new-version patch && yarn publish --non-interactive",
-        "doc": "typedoc --out doc --tsconfig tsconfig.lib.json",
+        "doc": "typedoc --out doc --tsconfig tsconfig.lib.json src/main/",
         "clean": "rm -rf lib dist bin doc && jest --clearCache",
         "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}"
     },
