--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     },
     "dependencies": {
         "@mmit/logging": "^0.1.5",
-        "date-fns": "^2.16.1",
+        "date-fns": "2.16.1",
         "path": "^0.12.7",
         "workbox-background-sync": "6.0.2",
         "workbox-broadcast-update": "6.0.2",
@@ -76,13 +76,13 @@
         "@mmit/styles": "^0.1.19",
         "@types/core-js": "^2.5.4",
         "@types/expect-puppeteer": "4.4.5",
-        "@types/jest": "^26.0.19",
-        "@types/node": "^14.11.2",
+        "@types/jest": "^26.0.20",
+        "@types/node": "^14.14.22",
         "@types/puppeteer": "^5.4.2",
         "@types/qunit": "^2.11.1",
         "@types/shelljs": "^0.8.8",
         "@types/ws": "^7.4.0",
-        "autoprefixer": "^10.1.0",
+        "autoprefixer": "^10.2.3",
         "awesome-typescript-loader": "^5.2.1",
         "babel-jest": "^26.6.3",
         "babel-loader": "^8.2.2",
@@ -105,19 +105,19 @@
         "jest-haste-map": "^26.6.2",
         "jest-puppeteer": "^4.4.0",
         "jest-resolve": "^26.6.2",
-        "mini-css-extract-plugin": "^1.3.3",
-        "node-sass": "^5.0.0",
-        "postcss": "^8.2.1",
-        "postcss-loader": "^4.1.0",
+        "mini-css-extract-plugin": "^1.3.4",
+        "postcss": "^8.2.4",
+        "postcss-loader": "^4.2.0",
         "puppeteer": "^5.5.0",
-        "qunit": "^2.13.0",
-        "sass-loader": "^10.1.0",
+        "qunit": "^2.14.0",
+        "sass": "^1.32.5",
+        "sass-loader": "^10.1.1",
         "semver": "^7.3.4",
         "shelljs": "^0.8.4",
         "source-map-loader": "^1.1.3",
         "style-loader": "^2.0.0",
         "ts-jest": "^26.4.4",
-        "ts-loader": "^8.0.12",
+        "ts-loader": "^8.0.14",
         "ts-node": "^9.1.1",
         "tslint": "^6.1.3",
         "tslint-consistent-codestyle": "^1.16.0",
@@ -128,10 +128,10 @@
         "url-loader": "^4.1.1",
         "webpack": "^4.44.2",
         "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0",
+        "webpack-dev-server": "^3.11.2",
         "webpack-livereload-plugin": "^2.3.0",
         "webpack-node-externals": "^2.5.2",
-        "workbox-build": "5.0.0",
+        "workbox-build": "6.0.2",
         "workbox-webpack-plugin": "^6.0.2"
     }
 }
