--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
         "ejs-compiled-loader": "^3.0.0",
         "file-loader": "^6.2.0",
         "html-loader": "^1.3.2",
-        "html-webpack-plugin": "^4.5.0",
+        "html-webpack-plugin": "^4.5.1",
         "html-webpack-string-replace-plugin": "^1.1.0",
         "jest": "^26.6.3",
         "jest-cli": "^26.6.3",
@@ -95,29 +95,29 @@
         "jest-puppeteer": "^4.4.0",
         "jest-resolve": "^26.6.2",
         "mini-css-extract-plugin": "^1.3.3",
-        "node-sass": "^5.0.0",
         "postcss": "^8.2.1",
         "postcss-loader": "^4.1.0",
         "puppeteer": "^5.5.0",
         "qunit": "^2.13.0",
+        "sass": "^1.32.5",
         "sass-loader": "^10.1.0",
         "semver": "^7.3.4",
         "shelljs": "^0.8.4",
         "source-map-loader": "^1.1.3",
         "style-loader": "^2.0.0",
         "ts-jest": "^26.4.4",
-        "ts-loader": "^8.0.12",
+        "ts-loader": "^8.0.14",
         "ts-node": "^9.1.1",
         "tslint": "^6.1.3",
         "tslint-consistent-codestyle": "^1.16.0",
         "tslint-loader": "^3.5.4",
         "tslint-override": "^1.0.1",
-        "typedoc": "^0.19.2",
+        "typedoc": "^0.20.16",
         "typescript": "^4.1.3",
         "url-loader": "^4.1.1",
-        "webpack": "^4.44.2",
-        "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0",
+        "webpack": "4.44.2",
+        "webpack-cli": "3",
+        "webpack-dev-server": "^3.11.2",
         "webpack-livereload-plugin": "^2.3.0",
         "webpack-node-externals": "^2.5.2"
     }
