--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
         "deploy": "yarn version --new-version patch && yarn publish --non-interactive",
         "doc": "typedoc --out doc --tsconfig tsconfig.lib.json src/main/",
-        "clean": "rm -rf lib dist bin doc && jest --clearCache",
+        "clean": "rm -rf lib dist bin && jest --clearCache && tsc -b --clean && rm -f .tsbuildinfo",
         "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}"
     },
     "files": [
