--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "start": "yarn serve --open",
         "tc": "tsc --noEmit --project tsconfig.lib.json",
         "tc:watch": "npm run tc -- --watch",
-        "lint": "tslint --project tsconfig.json",
+        "lint": "tslint --fix --project tsconfig.json",
         "test": "yarn run gen:barrels && jest --clearCache && yarn run test:unit && yarn run test:integration",
         "test:unit": "jest --colors test/unit",
         "test:integration": "jest --colors --runInBand --detectOpenHandles test/integration",
