--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "main": "./lib/index.js",
     "typings": "./lib/index.d.ts",
     "scripts": {
+        "clean": "rm -rf lib dist bin &&  rm -rf node_modules/@types/istanbul-reports && jest --clearCache && rm -rf .ts.cache && rm -rf .rollup.cache && rm -f .tsbuildinfo",
         "gen:barrels": "barrelsby --singleQuotes --delete -d src/main --exclude ConfigLog4j --exclude 'events/utils' -l top -s flat",
-        "serve": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development",
+        "serve": "NODE_ENV=development webpack serve --config webpack.web.js --mode development",
         "start": "yarn serve --open",
         "tc": "tsc --noEmit --project tsconfig.lib.json",
         "tc:watch": "npm run tc -- --watch",
@@ -34,7 +35,6 @@
         "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
         "deploy": "yarn version --new-version patch && yarn publish --non-interactive",
         "doc": "typedoc --out doc --tsconfig tsconfig.lib.json src/main/",
-        "clean": "rm -rf lib dist bin && jest --clearCache && tsc -b --clean && rm -f .tsbuildinfo",
         "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}"
     },
     "files": [
@@ -46,79 +46,81 @@
         "url": "https://github.com/MikeMitterer/typescript-training"
     },
     "dependencies": {
-        "@mmit/logging": "^0.1.5",
-        "date-fns": "^2.16.1",
+        "@mmit/logging": "^0.1.6",
+        "date-fns": "^2.22.1",
         "path": "^0.12.7"
     },
     "devDependencies": {
-        "@babel/cli": "^7.12.13",
-        "@babel/core": "^7.12.13",
-        "@babel/node": "^7.12.13",
-        "@babel/plugin-proposal-class-properties": "^7.12.13",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
-        "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
-        "@babel/plugin-proposal-optional-chaining": "^7.12.13",
-        "@babel/plugin-transform-runtime": "^7.12.15",
-        "@babel/preset-env": "^7.12.13",
-        "@babel/preset-typescript": "^7.12.13",
-        "@babel/runtime": "^7.12.13",
-        "@mmit/styles": "^0.1.21",
+        "@babel/cli": "^7.14.5",
+        "@babel/core": "^7.14.6",
+        "@babel/node": "^7.14.7",
+        "@babel/plugin-proposal-class-properties": "^7.14.5",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
+        "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
+        "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+        "@babel/plugin-transform-runtime": "^7.14.5",
+        "@babel/preset-env": "^7.14.7",
+        "@babel/preset-typescript": "^7.14.5",
+        "@babel/runtime": "^7.14.6",
+        "@mmit/styles": "^0.1.22",
+        "@types/chai": "^4.2.19",
         "@types/core-js": "^2.5.4",
         "@types/expect-puppeteer": "4.4.5",
-        "@types/jest": "^26.0.19",
-        "@types/node": "^14.14.25",
+        "@types/jest": "^26.0.23",
+        "@types/node": "^15.12.5",
         "@types/puppeteer": "^5.4.3",
         "@types/qunit": "^2.11.1",
         "@types/shelljs": "^0.8.8",
-        "@types/ws": "^7.4.0",
-        "autoprefixer": "^10.2.4",
+        "@types/ws": "^7.4.5",
+        "autoprefixer": "^10.2.6",
         "awesome-typescript-loader": "^5.2.1",
-        "babel-jest": "^26.6.3",
+        "babel-jest": "^27.0.6",
         "babel-loader": "^8.2.2",
         "babel-plugin-transform-inline-environment-variables": "^0.4.3",
         "babel-preset-modern-browsers": "^15.0.2",
         "barrelsby": "^2.2.0",
         "beautify-html-webpack-plugin": "^1.0.3",
+        "chai": "^4.3.4",
         "clean-terminal-webpack-plugin": "^3.0.0",
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^6.1.1",
-        "css-loader": "^5.0.2",
-        "ejs-compiled-loader": "^3.0.0",
+        "clean-webpack-plugin": "^4.0.0-alpha.0",
+        "copy-webpack-plugin": "^9.0.1",
+        "css-loader": "^5.2.6",
+        "ejs-compiled-loader": "^3.1.0",
         "file-loader": "^6.2.0",
-        "html-loader": "^1.3.2",
-        "html-webpack-plugin": "^4.5.1",
+        "html-loader": "^2.1.2",
+        "html-webpack-plugin": "^5.3.2",
         "html-webpack-string-replace-plugin": "^1.1.0",
-        "jest": "^26.6.3",
-        "jest-cli": "^26.6.3",
+        "jest": "^27.0.6",
+        "jest-cli": "^27.0.6",
         "jest-extended": "^0.11.5",
-        "jest-haste-map": "^26.6.2",
-        "jest-puppeteer": "^4.4.0",
-        "jest-resolve": "^26.6.2",
-        "mini-css-extract-plugin": "^1.3.6",
-        "postcss": "^8.2.5",
-        "postcss-loader": "^4.1.0",
-        "puppeteer": "^7.0.4",
+        "jest-haste-map": "^27.0.6",
+        "jest-puppeteer": "^5.0.4",
+        "jest-resolve": "^27.0.6",
+        "mini-css-extract-plugin": "^1.6.2",
+        "postcss": "^8.3.5",
+        "postcss-loader": "^6.1.0",
+        "puppeteer": "^10.1.0",
         "qunit": "^2.13.0",
-        "sass": "^1.32.6",
-        "sass-loader": "^10.1.1",
-        "semver": "^7.3.4",
+        "sass": "^1.35.1",
+        "sass-loader": "^12.1.0",
+        "semver": "^7.3.5",
         "shelljs": "^0.8.4",
-        "source-map-loader": "^1.1.3",
-        "style-loader": "^2.0.0",
-        "ts-jest": "^26.5.1",
-        "ts-loader": "^8.0.16",
-        "ts-node": "^9.1.1",
+        "source-map-loader": "^3.0.0",
+        "style-loader": "^3.0.0",
+        "ts-jest": "^27.0.3",
+        "ts-loader": "^9.2.3",
+        "ts-node": "^10.0.0",
         "tslint": "^6.1.3",
         "tslint-consistent-codestyle": "^1.16.0",
         "tslint-loader": "^3.5.4",
         "tslint-override": "^1.0.1",
-        "typedoc": "^0.20.23",
-        "typescript": "^4.1.3",
+        "typedoc": "^0.21.2",
+        "typescript": "^4.3.4",
         "url-loader": "^4.1.1",
-        "webpack": "4.44.2",
-        "webpack-cli": "3",
+        "webpack": "5.41.1",
+        "webpack-cli": "4.7.2",
         "webpack-dev-server": "^3.11.2",
-        "webpack-livereload-plugin": "^2.3.0",
-        "webpack-node-externals": "^2.5.2"
+        "webpack-livereload-plugin": "^3.0.1",
+        "webpack-node-externals": "^3.0.0"
     }
 }
