--- a/package.json
+++ b/package.json
@@ -62,14 +62,14 @@
         "@babel/preset-env": "^7.14.7",
         "@babel/preset-typescript": "^7.14.5",
         "@babel/runtime": "^7.14.6",
-        "@mmit/styles": "^0.1.22",
-        "@types/chai": "^4.2.19",
+        "@mmit/muni": "^0.0.2",
+        "@mmit/styles": "^0.1.33",
+        "@types/chai": "^4.2.22",
         "@types/core-js": "^2.5.4",
         "@types/expect-puppeteer": "4.4.5",
         "@types/jest": "^26.0.23",
         "@types/node": "^15.12.5",
         "@types/puppeteer": "^5.4.3",
-        "@types/qunit": "^2.11.1",
         "@types/shelljs": "^0.8.8",
         "@types/ws": "^7.4.5",
         "autoprefixer": "^10.2.6",
@@ -100,7 +100,6 @@
         "postcss": "^8.3.5",
         "postcss-loader": "^6.1.0",
         "puppeteer": "^10.1.0",
-        "qunit": "^2.13.0",
         "sass": "^1.35.1",
         "sass-loader": "^12.1.0",
         "semver": "^7.3.5",
