Auf ES-Lint umgestellt

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "start": "yarn serve --open",
         "tc": "tsc --noEmit --project tsconfig.lib.json",
         "tc:watch": "npm run tc -- --watch",
-        "lint": "tslint --fix --project tsconfig.json",
+        "lint": "yarn eslint src test",
+        "lint:fix": "yarn eslint src --fix",
         "test": "yarn run gen:barrels && jest --clearCache && yarn run test:unit && yarn run test:integration",
         "test:unit": "jest --colors test/unit",
         "test:integration": "jest --colors --runInBand --detectOpenHandles test/integration",
@@ -70,11 +71,14 @@
         "@types/caniuse-lite": "^1",
         "@types/chai": "^4.3.5",
         "@types/core-js": "^2.5.4",
+        "@types/eslint": "^8",
         "@types/expect-puppeteer": "5.0.3",
         "@types/jest": "^29.5.4",
         "@types/node": "^20.5.7",
         "@types/shelljs": "^0.8.12",
         "@types/ws": "^8.5.5",
+        "@typescript-eslint/eslint-plugin": "^6.5.0",
+        "@typescript-eslint/parser": "^6.5.0",
         "autoprefixer": "^10.4.15",
         "babel-jest": "^29.6.4",
         "babel-loader": "^9.1.3",
@@ -89,6 +93,7 @@
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.8.1",
         "ejs-compiled-loader": "^3.1.0",
+        "eslint": "^8.48.0",
         "file-loader": "^6.2.0",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.3",
@@ -113,9 +118,6 @@
         "ts-jest": "^29.1.1",
         "ts-loader": "^9.4.4",
         "ts-node": "^10.0.0",
-        "tslint": "^6.1.3",
-        "tslint-loader": "^3.5.4",
-        "tslint-override": "^1.0.1",
         "typedoc": "^0.25.0",
         "typescript": "^5.2.2",
         "url-loader": "^4.1.1",
