--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "extends": "./tsconfig.lib",
 
     "compilerOptions": {
-        // Dient zum importieren von json-Files
+        // Dient zum Importieren von json-Files
         // In der "include"-Section müssen auch die *.json-Files
         // eingebunden werden
         // "resolveJsonModule": true
@@ -23,7 +23,7 @@
 
     "include": [
         // Hier werden die auch die Tests eingebunden
-        // Nur damit funktioniert das überschreiben in der "prototype"-chain
+        // Nur damit funktioniert das Überschreiben in der "prototype"-chain
         // Nur damit funktioniert JEST richtig - bzw. die Kombi WS + JEST
         "test/**/*.ts",
 
