updateDevTemplates getestet und bei packages integriert

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "pkg:version": "echo $(jq -r -j '.name' < package.json;echo -n ': ';jq -r -j '.version' < package.json)",
         "update": "yarn update:browser",
         "update:browser": "browserslist --update-db",
+        "update:templates": "updateDevTemplates.sh -u",
         "clean": "rm -rf lib dist bin &&  rm -rf node_modules/@types/istanbul-reports && jest --clearCache && rm -rf .ts.cache && rm -rf .rollup.cache && rm -f .tsbuildinfo",
         "gen:barrels": "barrelsby --singleQuotes --delete -d src/main --exclude ConfigLog4j --exclude 'events/utils' -l top -s flat",
         "serve": "NODE_ENV=development webpack serve --config webpack.web.js --mode development",
