tests laufen über das tests-Directory

--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
         "start": "yarn serve --open",
         "tc": "tsc --noEmit --project tsconfig.lib.json",
         "tc:watch": "npm run tc -- --watch",
-        "lint": "yarn eslint src test",
+        "lint": "yarn eslint src tests",
         "lint:fix": "yarn eslint src --fix",
         "test": "yarn run gen:barrels && jest --clearCache && yarn run test:unit && yarn run test:integration",
-        "test:unit": "jest --colors test/unit",
-        "test:integration": "jest --colors --runInBand --detectOpenHandles test/integration",
-        "test:e2e": "E2E_TEST='true' jest --colors --runInBand --detectOpenHandles test/e2e",
+        "test:unit": "jest --colors tests/unit",
+        "test:integration": "jest --colors --runInBand --detectOpenHandles tests/integration",
+        "test:e2e": "E2E_TEST='true' jest --colors --runInBand --detectOpenHandles tests/e2e",
         "build": "rm -rf lib && yarn run gen:barrels && yarn run build:ts",
         "build:ts": "tsc --rootDir $(pwd)/src/main --project tsconfig.lib.json --declaration --outDir $(pwd)/lib",
         "build:ts:watch": "yarn build:ts --watch",
@@ -80,18 +80,22 @@
         "@types/ws": "^8.5.5",
         "@typescript-eslint/eslint-plugin": "^6.5.0",
         "@typescript-eslint/parser": "^6.5.0",
+        "assert": "^2.0.0",
         "autoprefixer": "^10.4.15",
         "babel-jest": "^29.6.4",
         "babel-loader": "^9.1.3",
         "babel-plugin-transform-inline-environment-variables": "^0.4.3",
         "babel-preset-modern-browsers": "^15.0.2",
         "barrelsby": "^2.8.0",
+        "browserify-zlib": "^0.2.0",
         "browserlist": "^1.0.1",
+        "buffer": "^6.0.3",
         "caniuse-lite": "^1.0.30001525",
         "chai": "^4.3.8",
         "clean-terminal-webpack-plugin": "^3.0.0",
         "clean-webpack-plugin": "^4.0.0-alpha.0",
         "copy-webpack-plugin": "^11.0.0",
+        "crypto-browserify": "^3.12.0",
         "css-loader": "^6.8.1",
         "ejs-compiled-loader": "^3.1.0",
         "eslint": "^8.48.0",
@@ -99,6 +103,7 @@
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.3",
         "html-webpack-string-replace-plugin": "^1.1.0",
+        "https-browserify": "^1.0.0",
         "jest": "^29.6.4",
         "jest-cli": "^29.6.4",
         "jest-environment-jsdom": "^29.6.4",
@@ -107,6 +112,7 @@
         "jest-puppeteer": "^9.0.0",
         "jest-resolve": "^29.6.4",
         "mini-css-extract-plugin": "^2.7.6",
+        "path-browserify": "^1.0.1",
         "postcss": "^8.4.29",
         "postcss-loader": "^7.3.3",
         "puppeteer": "^21.1.1",
@@ -115,6 +121,8 @@
         "semver": "^7.5.4",
         "shelljs": "^0.8.4",
         "source-map-loader": "^4.0.1",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
         "style-loader": "^3.3.3",
         "ts-jest": "^29.1.1",
         "ts-loader": "^9.4.4",
