Tests, Build und Lint laufen

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "main": "./lib/index.js",
     "typings": "./lib/index.d.ts",
     "scripts": {
-        "pkg:version": "echo $(jq -r -j '.name' < package.json;echo -n ': ';jq -r -j '.version' < package.json)",
+        "version:pkg": "jq -r '.version' < package.json",
+        "version:pkg:full": "echo $(jq -r -j '.name' < package.json;echo ': ';yarn version:pkg)",
+        "version:remote": "curl --silent -X GET -H \"Authorization: token ${GH_TOKEN_READ_PRIVATE_REPO}\" \"https://raw.githubusercontent.com/$(cat ./.gitorg)/ts-tdd/master/package.json\" | jq -r \".version\" ",
         "update": "yarn update:browser",
         "update:browser": "browserslist --update-db",
         "update:templates": "updateDevTemplates.sh -u",
@@ -59,10 +61,6 @@
         "@babel/cli": "^7.22.10",
         "@babel/core": "^7.22.11",
         "@babel/node": "^7.22.10",
-        "@babel/plugin-proposal-class-properties": "^7.14.5",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
-        "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-        "@babel/plugin-proposal-optional-chaining": "^7.21.0",
         "@babel/plugin-transform-runtime": "^7.22.10",
         "@babel/preset-env": "^7.22.10",
         "@babel/preset-typescript": "^7.22.11",
@@ -129,7 +127,6 @@
         "ts-node": "^10.0.0",
         "typedoc": "^0.25.0",
         "typescript": "^5.2.2",
-        "url-loader": "^4.1.1",
         "webpack": "5.88.2",
         "webpack-cli": "5.1.4",
         "webpack-dev-server": "4.7.4",
