Build-Jenkins hat die Möglichkeit node_modules zu löschen

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "update": "yarn update:browser",
         "update:browser": "browserslist --update-db",
         "update:templates": "updateDevTemplates.sh -u",
-        "clean": "rm -rf lib dist bin &&  rm -rf node_modules/@types/istanbul-reports && jest --clearCache && rm -rf .ts.cache && rm -rf .rollup.cache && rm -f .tsbuildinfo",
+        "clean": "rm -rf lib dist bin",
+        "clean:jest": "jest --clearCache",
+        "clean:all": "yarn clean && yarn clean:jest && rm -f yarn.lock && rm -rf node_modules",
         "gen:barrels": "barrelsby --singleQuotes --delete -d src/main --exclude ConfigLog4j --exclude 'events/utils' -l top -s flat",
         "serve": "NODE_ENV=development webpack serve --config webpack.web.js --mode development",
         "start": "yarn serve --open",
