--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
         "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
         "deploy": "yarn version --new-version patch && yarn publish --non-interactive",
         "doc": "typedoc --out doc --tsconfig tsconfig.lib.json src/main/",
-        "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}"
+        "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}",
+        "export:scripts": "jq -r '.scripts' package.json > \"${DEV_LOCAL}/Templates/Production/TypeScript/packages/scripts.json\""
     },
     "files": [
         "lib",
