Alles auf den aktuellen Stand gebracht

--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "scripts": {
         "version:pkg": "jq -r '.version' < package.json",
         "version:pkg:full": "echo $(jq -r -j '.name' < package.json;echo ': ';yarn version:pkg)",
-        "version:remote": "curl --silent -X GET -H \"Authorization: token ${GH_TOKEN_READ_PRIVATE_REPO}\" \"https://raw.githubusercontent.com/$(cat ./.gitorg)/ts-tdd/master/package.json\" | jq -r \".version\" ",
+        "version:remote": "curl --silent -X GET -H \"Authorization: token ${GH_TOKEN_READ_PRIVATE_REPO}\" \"https://raw.githubusercontent.com/$(cat ./.gitorg)/$(git repo)/master/package.json\" | jq -r \".version\" ",
+        "version:remote:full": "echo $(jq -r -j '.name' < package.json;echo ': ';yarn version:remote)",
         "update": "yarn update:browser",
         "update:browser": "browserslist --update-db",
         "update:templates": "updateDevTemplates.sh -u",
-        "clean": "rm -rf lib dist bin &&  rm -rf node_modules/@types/istanbul-reports && jest --clearCache && rm -rf .ts.cache && rm -rf .rollup.cache && rm -f .tsbuildinfo",
+        "clean": "rm -rf lib dist bin",
+        "clean:jest": "jest --clearCache",
+        "clean:all": "yarn clean && yarn clean:jest && rm -f yarn.lock && rm -rf node_modules",
         "gen:barrels": "barrelsby --singleQuotes --delete -d src/main --exclude ConfigLog4j --exclude 'events/utils' -l top -s flat",
         "serve": "NODE_ENV=development webpack serve --config webpack.web.js --mode development",
         "start": "yarn serve --open",
@@ -42,7 +45,9 @@
         "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
         "deploy": "yarn version --new-version patch && yarn publish --non-interactive",
         "doc": "typedoc --out doc --tsconfig tsconfig.lib.json src/main/",
-        "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}"
+        "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}",
+        "export": "yarn save:scripts",
+        "export:scripts": "jq -r '.scripts' < package.json > ${DEV_LOCAL}/Templates/Production/TypeScript/package/scripts.json"
     },
     "files": [
         "lib",
